--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+.form-control{
+    border-radius: 0px !important;
+    border: 1px solid #4b4b4b !important;
+}
+.btn{
+    border-radius: 0px !important;
+}
+.row{
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+}
