--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="row py-4">
-    <div *ngFor="let anime of animeList" class="col-md-3">
+<div class="row">
+    <div *ngFor="let anime of animeList" class="col-md-3 py-4">
         <div class="card bg-secondary">
             <img src="{{'data:image/jpeg;base64,' + anime.image.data}}" alt="anime.pictureName" class="card-img-top">
             <div class="card-body">
