--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,9 @@
-<div class="row">
+<div class="text-center py-5" *ngIf="!loaded">
+        <div class="spinner-border" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+</div>
+<div class="row" *ngIf="loaded">
     <div *ngFor="let anime of animeList" class="col-md-3 py-4">
         <div class="card bg-secondary">
             <img src="{{'data:image/jpeg;base64,' + anime.image.data}}" alt="anime.pictureName" class="card-img-top">
