--- a/src/app/components/edit-anime/edit-anime.component.html
+++ b/src/app/components/edit-anime/edit-anime.component.html
@@ -70,7 +70,7 @@
                 <div class="col-md-6 pt-3" *ngFor="let season of anime.seasons">
                     <div class="row">
                         <div class="col-5 pointer" data-toggle="collapse" attr.data-target="#season{{ season.number }}" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
-                            <h4>Season {{ season.number }}</h4>
+                            <label class="font-weight-bold">Season {{ season.number }}</label><span class="pl-1 mb-1"><i class="fa fa-chevron-down"></i></span>
                         </div>
                         <div class="col-7 text-left">
                             <button class="btn btn-outline-dark" (click)="editSeason(season.number)">Edit Season?</button>
