--- a/src/app/components/anime-detail/anime-detail.component.html
+++ b/src/app/components/anime-detail/anime-detail.component.html
@@ -42,7 +42,7 @@
                         <div class="row">
                             <div class="col-6 py-3 season-detail d-flex" *ngFor="let episode of season.episodes">
                                 <label>Episode {{ episode.number }} : {{ episode.title | uppercase }} </label>
-                                <p>{{ episode.description }}</p>
+                                <p class="mb-auto pb-3">{{ episode.description }}</p>
                                 <a href="{{ episode.url }}" target="_blank" class="btn btn-outline-dark mx-auto">Watch Now at
                                     KissAnime!</a>
                             </div>
