--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,11 +5,11 @@
 </div>
 <div class="row" *ngIf="loaded">
     <div *ngFor="let anime of animeList" class="col-md-3 py-4">
-        <div class="card bg-dark" (click)="openAnimeDetail(anime)">
+        <div class="card card-shadow" (click)="openAnimeDetail(anime)">
             <img src="{{ anime.imagePath }}" alt="anime.pictureName" class="card-img-top">
             <div class="card-body">
-                <h5 class="card-title text-white"> {{ anime.name }}</h5>
-                <p class="card-text text-white">{{ anime.description }} </p>
+                <h5 class="card-title"> {{ anime.name }}</h5>
+                <p class="card-text">{{ anime.description }} </p>
             </div>
         </div>
     </div>
