Design for Tablet

--- a/src/app/components/anime-detail/anime-detail.component.css
+++ b/src/app/components/anime-detail/anime-detail.component.css
@@ -3,6 +3,16 @@
     box-shadow: 0 2px 4px 0 rgba(44, 42, 41, 0.2);
 }
 
+.back-button:hover {
+    background-color: #DEDEDE;
+    color: #4B4B4B;
+}
+
+.edit-button {
+    width: 150px;
+    box-shadow: 0 2px 4px 0 rgba(44, 42, 41, 0.2);
+}
+
 .back-icon {
     width: 20px;
 }
