--- a/src/app/components/anime-detail/anime-detail.component.html
+++ b/src/app/components/anime-detail/anime-detail.component.html
@@ -7,17 +7,17 @@
     <div *ngIf="loaded">
         <div class="row color-shade py-5">
             <div class="col-6 pb-4">
-                <a [routerLink]="['']" class="btn btn-outline-dark back-button"><i class="fa fa-chevron-left"></i><span
+                <a [routerLink]="['']" class="btn btn-dark back-button"><i class="fa fa-chevron-left"></i><span
                         class="back-text pl-3">Back</span></a>
             </div>
             <div class="col-6 pb-4 text-right" *ngIf="loggedIn">
-                <button (click)="editAnime()" class="btn btn-outline-dark back-button"><i class="fa fa-edit"></i><span
+                <button (click)="editAnime()" class="btn btn-outline-dark edit-button"><i class="fa fa-edit"></i><span
                         class="back-text pl-3">Edit</span></button>
             </div>
-            <div class="col-md-8 py-4">
+            <div class="col-lg-8 py-4">
                 <img src="{{ anime.imagePath }}" alt="{{ anime.name }} image" class="img-fluid">
             </div>
-            <div class="col-md-4 text-center my-auto">
+            <div class="col-lg-4 text-center my-auto">
                 <h2 class="">{{ anime.name }}</h2>
                 <p class="">{{ anime.description }}</p>
                 <label for="">IMDB Source : <a href="{{ anime.source }}" target="_blank"
@@ -31,8 +31,8 @@
                 <div class="col-12">
                     <h3>Episode Catalogue :</h3>
                 </div>
-                <div class="col-md-6 py-3 pointer" *ngFor="let season of anime.seasons">
-                    <div class="color-shade py-3 px-3" data-toggle="collapse" attr.data-target="#season{{ season.number }}"
+                <div class="col-md-6 py-3" *ngFor="let season of anime.seasons">
+                    <div class="color-shade py-3 px-3 pointer" data-toggle="collapse" attr.data-target="#season{{ season.number }}"
                         role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
                         <h4 class="text-dark">Season {{ season.number }} <span class="float-right"><i
                                     class="fa fa-chevron-down"></i></span>
