--- a/src/app/components/edit-anime/edit-anime.component.html
+++ b/src/app/components/edit-anime/edit-anime.component.html
@@ -34,6 +34,24 @@
                             formControlName="airEndDate">
                     </div>
                     <div class="row form-group">
+                        <label for="" class="col-md-3 col-form-label pl-0">Youtube Trailer URL : </label>
+                        <input type="text" name="" id="" placeholder="Youtube Trailer URL" class="col-md-9 form-control"
+                            formControlName="youtubeUrl">
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-md-12 px-0">
+                            <button class="btn btn-outline-dark" (click)="addHosts()" type="button">Add Places to
+                                Watch?</button>
+                            <div class="row pt-3" formArrayName="hosts">
+                                <div class="col-md-4 px-0 pr-md-2 pt-3"
+                                    *ngFor="let host of hosts.controls; let i = index;">
+                                    <label>Where to Watch :</label>
+                                    <input type="text" class="form-control" [formControlName]="i">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row form-group">
                         <label for="" class="col-md-3 col-form-label pl-0">Image Location : </label>
                         <input type="text" (input)="changeFile($event)" class="form-control col-md-9"
                             placeholder="Image Hosted Path" formControlName="image" />
@@ -42,6 +60,20 @@
                         <div class="col-md-5 mx-auto px-0">
                             <div *ngIf="imgPath != null">
                                 <img [src]="imgPath" alt="" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-md-12 px-0">
+                            <button class="btn btn-outline-dark" (click)="addImages()" type="button">Add More
+                                Images?</button>
+                            <div class="row pt-3" formArrayName="images">
+                                <div class="col-md-4 px-0 pr-md-2 pt-3"
+                                    *ngFor="let image of images.controls; let i = index;">
+                                    <label>Image Path :</label>
+                                    <input type="text" class="form-control" [formControlName]="i">
+                                    <img src="{{ image.value }}" alt="" class="img-fluid pt-2">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -69,11 +101,14 @@
             <div class="row w-100">
                 <div class="col-md-6 pt-3" *ngFor="let season of anime.seasons">
                     <div class="row">
-                        <div class="col-5 pointer" data-toggle="collapse" attr.data-target="#season{{ season.number }}" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
-                            <label class="font-weight-bold">Season {{ season.number }}</label><span class="pl-1 mb-1"><i class="fa fa-chevron-down"></i></span>
+                        <div class="col-5 pointer" data-toggle="collapse" attr.data-target="#season{{ season.number }}"
+                            role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
+                            <label class="font-weight-bold">Season {{ season.number }}</label><span class="pl-1 mb-1"><i
+                                    class="fa fa-chevron-down"></i></span>
                         </div>
                         <div class="col-7 text-left">
-                            <button class="btn btn-outline-dark" (click)="editSeason(season.number)">Edit Season?</button>
+                            <button class="btn btn-outline-dark" (click)="editSeason(season.number)">Edit
+                                Season?</button>
                         </div>
                         <div class="col-12 collapse" id="season{{season.number}}">
                             <div class="row" *ngFor="let episode of season.episodes">
