--- a/src/app/components/anime-detail/anime-detail.component.css
+++ b/src/app/components/anime-detail/anime-detail.component.css
@@ -41,13 +41,23 @@
 }
 
 .color-shade:hover {
-    box-shadow: 0 2px 4px 0 rgba(44, 42, 41, 0.5)
+    box-shadow: 0 2px 4px 0 rgba(44, 42, 41, 0.5);
 }
 
 .season-detail {
     flex-direction: column;
     justify-content: space-between;
-    min-height: 200px;
+    border-bottom: 1px solid #dedede;
+    box-shadow: 0 2px 4px 0 rgba(44, 42, 41, 0.2);
+}
+
+.season-detail:hover {
+    box-shadow: 0 2px 4px 0 rgba(44, 42, 41, 0.5);
+}
+
+.season-detail-main {
+    max-height: 600px;
+    overflow-y: auto;
 }
 
 .rotate {
@@ -62,8 +72,4 @@
     transform: rotate(180deg);
 }
 
-@media only screen and (max-width: 767px) {
-    .season-detail {
-        min-height: 250px;
-    }
-}
+@media only screen and (max-width: 767px) {}
